Updated changelog and fixed search modal offset on mobile

--- a/src/assets/stylesheets/main/layout/_search.scss
+++ b/src/assets/stylesheets/main/layout/_search.scss
@@ -53,7 +53,7 @@
     // [tablet portrait -]: Search modal
     @include break-to-device(tablet portrait) {
       position: absolute;
-      top: px2rem(4px);
+      top: px2rem(-20px);
       left: px2rem(-44px);
       width: px2rem(40px);
       height: px2rem(40px);
